# elastic-annotations

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: annotate.yaml
annotations/: scanr-organizations.yaml  scanr-participations.yaml  scanr-patents.yaml  scanr-persons.yaml  scanr-projects.yaml  scanr-publications.yaml  scanr_publications.yaml
configs/: scanr-organizations.yaml  scanr-participations.yaml  scanr-patents.yaml  scanr-persons.yaml  scanr-projects.yaml  scanr-publications.yaml
schemas/: scanr-organizations.json  scanr-participations.json  scanr-patents.json  scanr-persons.json  scanr-projects.json  scanr-publications.json
schemas/api/: scanr_publications.json
schemas/mcp/: scanr_publications.json
src/: config.py  elastic.py  enrich.py  export.py  merge.py  mistral.py  review.py  utils.py
